--- a/vue-relearn/package.json
+++ b/vue-relearn/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async-validator": "^1.11.2",
     "core-js": "^2.6.5",
+    "vant": "^2.10.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
